--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,34 @@
 
+.title {
+	margin-top: 35px; 
+	font-size: 20px;
+	align-items: center;
+}
+.main-title{
+	height: 65px;
+}
 .email-div{
 	border:1px solid #6699ff;
-	margin: 3px;
+	margin: 7px;
+	margin-right: 0px;
 	display: inline-block;
 	position: relative;
 	float: left;
-	padding: 4px;
+	padding: 2px;
 	border-radius: 15px;
 	background: #6699ff;
+	padding-left: 8px;
+    padding-right: 8px;
 }
 
 .invalid{
 	background: tomato;
 	border: 1px solid tomato;
-	
 }
 
 .email-string{
 	border: 0px;
-	margin: 4px;
+	margin: 7px;
 	padding:4px;
 	display: inline-block;
 	position: relative;
@@ -27,24 +37,18 @@
 }
 
 .email-container{
-	width: 400px;
-	height: 300px;
-	border: 1px solid gray;
-	padding: 10px;
-	border-radius: 10px;
-	overflow-x: auto;
+	height: 150px;
+	width: 100%;
 }
 
+.email-container-deeper{
+	height: 99px;
+	background: white;
+	overflow-x: auto;
+}
 .email-name{
 	display: inline-block;
 	float: left;
-}
-
-.email-button{
-	display: inline-block;
-	position: relative;
-	float: left;
-	border:1px solid gray;
 }
 
 .close-button{
@@ -55,4 +59,23 @@
 	cursor: pointer;
 }
 
-
+.email-button{
+	display: inline-block;
+	position: relative;
+	float: left;
+	border:7px solid #6699ff;
+	margin-top: 20px; 
+	margin-right: 20px;
+	background: #6699ff;
+	color: white;
+	border-radius: 2px;
+}
+.main-div{
+	border:1px solid gray;
+	width: 500px;
+	height: 400px;
+	background: #f1f1f1;
+}
+.button-div{
+	background: #f1f1f1;
+}
