--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,12 @@
 	padding-left: 8px;
     padding-right: 8px;
 }
-
+.email-under-div{
+	color: black;
+}
 .invalid{
-	background: tomato;
-	border: 1px solid tomato;
+	text-decoration: underline;
+	color: red;
 }
 
 .email-string{
@@ -39,13 +41,10 @@
 .email-container{
 	height: 150px;
 	width: 100%;
-}
-
-.email-container-deeper{
-	height: 99px;
 	background: white;
 	overflow-x: auto;
 }
+
 .email-name{
 	display: inline-block;
 	float: left;
