--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,33 @@
 
+body{
+	font-family: 'Segoe UI';
+	font-size: 13px;
+	background: #f5f5f5;
+}
 .title {
-	margin-top: 35px; 
-	font-size: 20px;
-	align-items: center;
+	margin-top: 40px; 
+	font-size: 19px;
+	background: #f5f5f5;
 }
 .main-title{
-	height: 65px;
+	height: 61px;
+	margin-left:39px;
 }
 .email-div{
-	border:1px solid #6699ff;
+	border:1px solid #D7E8F1;
 	margin: 7px;
 	margin-right: 0px;
 	display: inline-block;
 	position: relative;
 	float: left;
-	padding: 2px;
 	border-radius: 15px;
-	background: #6699ff;
+	background: #D7E8F1;
 	padding-left: 8px;
     padding-right: 8px;
+	padding-bottom: 3px;
+    padding-top: 1px;
+	margin-top: 7px;
+    margin-left: 8px;
 }
 .email-under-div{
 	color: black;
@@ -36,13 +45,18 @@
 	position: relative;
 	float: left;
 	outline: none;
+	font-family: 'Segoe UI';
+    margin-top: 5px;
+    margin-left: 6px;
 }
 
 .email-container{
-	height: 150px;
+	height: 100%;
 	width: 100%;
 	background: white;
 	overflow-x: auto;
+	border-top: 1px solid #c6c6c6;
+	margin-left: 39px;
 }
 
 .email-name{
@@ -52,10 +66,11 @@
 
 .close-button{
 	display: inline-block;
-	font-size: 70%;
-	margin-left: 5px;
+	font-size: 75%;
+	margin-left: 7px;
 	vertical-align: middle;
 	cursor: pointer;
+	padding-bottom: 2px;
 }
 
 .email-button{
@@ -63,18 +78,25 @@
 	position: relative;
 	float: left;
 	border:7px solid #6699ff;
-	margin-top: 20px; 
+	border-left: 12px solid #6699ff;
+	border-right: 12px solid #6699ff;
 	margin-right: 20px;
 	background: #6699ff;
 	color: white;
 	border-radius: 2px;
 }
+
 .main-div{
-	border:1px solid gray;
-	width: 500px;
-	height: 400px;
-	background: #f1f1f1;
+	width: 420px;
+	height: 100px;
+	background: #f5f5f5;
 }
+
 .button-div{
-	background: #f1f1f1;
+	margin-top: 29px;
+	padding-top:30px;
+	padding-left: 39px;
+	height: 100px;
+	width: 500px;
+	background: white;
 }
